implenmenteren van personen op de squadpage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,13 @@
 <%- include('./partials/head') %>
 
 <ul>
-  <% data.forEach(person => { %>
-  <li><a href="./person/<%= person.id %>"><%=person.name %></a></li>
-  <% }) %>
-</ul>
+    <% data.forEach(person => {
+        if(person.squad_id === 3 && person.role.includes("member")) { %>
+          <li><a href="./person/<%= person.id %>"><%= person.name %></a>
+            %>
+          </li>
+        <% }
+      }) %>
+    </ul>
 
 <%- include('./partials/foot') %>
