root ingevoegd en header fine-tune

--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 * {
+
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
   --main-color-1:#FCCF68;
   --main-color-2:#669ACC;
   --secondary-color-1:#D0E0F0;
   --secondary-color-2:#fff;
   --active-color-1:#0765BF;
 
-  
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  --regular-font: verdana, arial, helvetica;
 }
 
 header {
   background: var(--main-color-1);
   width: 100%;
   padding: 1em;
+  display: block;
+  top: 0;
 
   & img {
     width: 10em;
@@ -24,10 +30,9 @@ header {
 }
 
 body {
-  min-height: 100vh;
   display: grid;
   place-items: center;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: var(--regular-font);
   background:var(--secondary-color-2);
 
   & article.person {
