hyperlink naar pagina

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,7 @@
   <body>
     
     <header>
-      <img src="/assets/logo/Hyves.svg">
+     <a href="index.ejs"><img src="/assets/logo/Hyves.svg"></a>
     </header>
 
     <main>
