--- a/public/style.css
+++ b/public/style.css
@@ -33,9 +33,20 @@ header {
 main {
   padding: 1em;
   display: grid;
+  grid-template-columns: 15em 15em 15em 15em 15em;
+  justify-content: center;
   place-items: center;
   font-family: var(--regular-font);
   background:var(--secondary-color-2);
+
+  & a {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    flex-wrap: nowrap;
+  }
 
   & img {
     width: 10em;
@@ -44,7 +55,7 @@ main {
   }
 
   & ul {
-    display: flex;
+    display: contents;
     flex-direction: column;
     
     list-style-type: none;
@@ -53,14 +64,6 @@ main {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 0;
-  }
-
-  & li {
-
-    display: flex;
-    flex-direction: column;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
   }
 
   & article.person {
