--- a/public/style.css
+++ b/public/style.css
@@ -30,14 +30,33 @@ header {
   }
 }
 
-main {
-  padding: 1em;
-  display: grid;
-  grid-template-columns: 15em 15em 15em 15em 15em;
-  justify-content: center;
-  place-items: center;
+body{
   font-family: var(--regular-font);
+}
+
+main {
   background:var(--secondary-color-2);
+
+  & h1 {
+    background: var(--main-color-2);
+    padding: .5em;
+    color: var(--secondary-color-2);
+    text-transform: uppercase;
+  }
+
+  & ul {
+    padding: 1em;
+    display: grid;
+    grid-template-columns: 15em 15em 15em;
+    justify-content: center;
+    
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0;
+  }
 
   & a {
     cursor: pointer;
@@ -54,53 +73,4 @@ main {
     object-fit: cover;
   }
 
-  & ul {
-    display: contents;
-    flex-direction: column;
-    
-    list-style-type: none;
-    margin-block-start: 0;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0;
-  }
-
-  & article.person {
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-    width: 12rem;
-    aspect-ratio: 1/1;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    background: white;
-    text-align: center;
-    transform-origin: center;
-    transform: rotate(2deg);
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-
-    & header {
-      padding: 0.5rem;
-      background: red;
-      color: white;
-
-      & h1 {
-        text-transform: uppercase;
-      }
-    }
-
-    & > p {
-      font-size: 2rem;
-      font-family: 'Permanent Marker', cursive;
-      transform-origin: center;
-      transform: rotate(-6deg);
-      word-break: break-all;
-    }
-
-    & footer {
-      height: 1rem;
-      background: red;
-    }
-  }
 }
