--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
 <section>
 <h1>Vrienden <span>(60)</span></h1>
 
-<ul>
+<ul class="profile">
     <% data.forEach(person => {
-        if(person.squad_id === 3 && person.role.includes("member")) { %>
+        if(person.role.includes("member")) { %>
           <li>
 
             <a href="">
               <img src="<%= person.avatar %>" alt="profiel" id="profile-image" onerror="insertPlaceholder()">
-              <%= person.name %> <%= person.prefix %> <%= person.surname %>
+              <p><%= person.name %> <%= person.prefix %> <%= person.surname %></p>
             </a>
 
             %>
