--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
           <li>
 
             <a href="">
-              <img src="<%= person.avatar %>" alt="profiel" id="profile-image" onerror="insertPlaceholder()">
+              <img src="<%= person.avatar %>" alt="profiel" id="profile-image" onerror="this.onerror=null; this.src='assets/images/placeholder.jpg'">
               <p><%= person.name %> <%= person.prefix %> <%= person.surname %></p>
             </a>
 
