--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
          { %>
           <li>
 
-            <a href="">
+            <a href="/person/<%=person.id%>">
 
               <img 
               src="<%= person.avatar %>" 
