--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@
   --main-color-2:#669ACC;
   --secondary-color-1:#D0E0F0;
   --secondary-color-2:#fff;
+  --secondary-color-3:#1b1b1b;
   --active-color-1:#00478a;
 
   --regular-font: verdana, arial, helvetica;
@@ -36,13 +37,19 @@ main {
 }
 
 main h1 {
-  background: var(--main-color-2);
-  padding: .5em;
   color: var(--secondary-color-2);
   text-transform: uppercase;
 }
 
-main ul {
+.friend-header{
+  background: var(--main-color-2);
+  padding: .5em;
+  height: 4em;
+  display: flex;
+  align-items: center;
+}
+
+.friend-menu ul {
   padding: 1em;
   display: grid;
   grid-template-columns: 15em;
@@ -57,7 +64,7 @@ main ul {
   padding-inline-start: 0;
 }
 
-main a {
+.friend-menu a {
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -71,34 +78,58 @@ main a {
   text-decoration: none;
 }
 
-main a:hover {
+.friend-menu a:hover {
   color: var(--main-color-2);
   transition: .1s ease;
 }
 
-main img {
+.friend-menu img {
   width: 10em;
   height: 10em;
   object-fit: cover;
 }
 
 @media (min-width: 768px )  {
-  main ul{
+  .friend-menu ul{
     grid-template-columns: 15em 15em;
 
   }
 }
 
 @media (min-width: 1024px )  {
-  main ul {
+  .friend-menu ul {
     grid-template-columns: 15em 15em 15em;
 
   }
 }
 
 @media (min-width: 1440px ) {
-  main ul {
+  .friend-menu ul {
     grid-template-columns: 15em 15em 15em 15em;
 
   }
+}
+
+/* Detail pagina */
+
+.friend-information {
+  background-color: var(--secondary-color-1);
+  display: block;
+  padding: 1em;
+}
+
+.friend-information img {
+  width: 20em;
+  height: 20em;
+  object-fit: cover;
+  background-color: var(--secondary-color-2);
+}
+
+.friend-information h1 {
+  background-color: none;
+  color: var(--secondary-color-3);
+}
+
+.friend-information p {
+  background-color: var(--active-color-1);
 }
