--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,42 +2,38 @@
 
 <section class="friend-header">
   <h1 id="friend-count">Vrienden (0)</h1>
-
+  <form action="/search-results">
+    <input type="text" placeholder="vrienden zoeken">
+    <button type="submit" name="actie" value="zoeken">Zoeken</button>
+  </form>
 </section>
 
 <div class="friend-menu">
 <ul class="friend">
+  <% personsdata.forEach(person => {
+      <!-- if(person.role.includes("member")) -->
+        { %>
+        <li>
+          <a href="/person/<%=person.id%>">
 
+            <img 
+            src="<%= (person.avatar == '') ? 'assets/placeholder.jpg' : person.avatar %>"
+            alt="profiel" 
+            onerror="this.src='/assets/images/placeholder.jpg'"
+            >
 
-  
-    <% personsdata.forEach(person => {
-        <!-- if(person.role.includes("member")) -->
-         { %>
-          <li>
-            <a href="/person/<%=person.id%>">
+            <h2>
+              <%= person.name %> 
+              <%= person.prefix %> 
+              <%= person.surname %>
+            </h2>
+          </a>
 
-              <img 
-              src="<%= (person.avatar == '') ? 'assets/placeholder.jpg' : person.avatar %>"
-              alt="profiel" 
-              onerror="this.src='/assets/images/placeholder.jpg'"
-              >
-
-              <h2>
-                <%= person.name %> 
-                <%= person.prefix %> 
-                <%= person.surname %>
-              </h2>
-              <!-- <p>
-                <%- person.bio %>
-              </p> -->
-
-            </a>
-
-            %>
-          </li>
-        <% }
-      }) %>
+          %>
+        </li>
+      <% }
+    }) %>
 </ul>
-</section>
+</div>
 
 <%- include('./partials/foot') %>
