--- a/public/style.css
+++ b/public/style.css
@@ -42,10 +42,7 @@ main h1 {
   text-transform: uppercase;
 }
 
-section,
-div {
-  padding: 1em;
-}
+
 .friend-header{
   background: var(--main-color-2);
   padding: .5em;
@@ -120,21 +117,57 @@ div {
 
 /* Detail pagina */
 
-.friend-information {
+.friend-main-information {
   background-color: var(--secondary-color-1);
   display: block;
+  padding: 1em;
 }
 
-.friend-information img {
+.friend-main-information img {
   width: 20em;
   height: 20em;
   object-fit: cover;
   background-color: var(--secondary-color-2);
 }
 
-.friend-information h1 {
+.friend-information section {
+  padding: 1em;
+}
+
+
+.friend-main-information h1 {
   background-color: none;
   color: var(--secondary-color-3);
   text-transform: none;
 }
 
+.friend-main-information button {
+  background-color: var(--active-color-1);
+  color: var(--secondary-color-2);
+  font-size: 1em;
+  font-weight: 900;
+  padding: .2em
+
+}
+
+
+.friend-information h2 {
+  text-decoration: solid underline var(--active-color-1)  .1em;
+}
+
+.friend-information ul {
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
+}
+
+.friend-information .friend-bio {
+  background-color: #fff5bf;
+}
+
+.friend-information .friend-bio h2{
+  text-decoration: none;
+}
